@startuml

!include exist.pu

title Leaf

class StrRefFac < V > {
	+ learfref( refs, update );
	+ tostr
}

class "Leaf < V >" as Leaf {
	+ createRef( { update, terminate } )
	+ createConv( conv : V => string )
	# convs : Set < StrRefFac >
	..
	# value : V
	+ set( value : V )
	+ get() : V
	..
	terminate()
}

class Conv {
	+ createRef( update, tostr );
	..
	leaf : Leaf | null
	tostr : V => string | null
	..
	terminate()
}

class "Leaf.Ref < V >" as LeafRef {
	+ value : V
	..
	+ _new_value( newval :V, oldval : V )
}

Exist <|-- StrRefFac
StrRefFac <|-- Leaf
StrRefFac <|-- Conv
Leaf "1" *- "*" Conv
ExistRef <|--- LeafRef
LeafRef <.> Leaf

@enduml
